--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,26 +1,39 @@
 ---
-import '../styles/global.css';
+import "../styles/global.css";
 ---
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body class="relative">
-		<div id="preloader" class="preloader">
-			<div class="preloader-content text-center">
-				<h2 class="text-3xl font-bold mb-2 futuristic-text">
-					<span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500">CARGANDO</span>
-				</h2>
-				<div class="loading-bar container">
-					<div id="loading-bar" class="loading-bar"></div>
-				</div>
-			</div>
-		</div>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro Basics</title>
+  </head>
+  <body class="relative">
+    <div id="preloader" class="preloader">
+      <div class="preloader-content text-center">
+        <h2 class="text-3xl font-bold mb-2 futuristic-text">
+          <span
+            class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500"
+            >CARGANDO...</span
+          >
+        </h2>
+        <div class="loading-bar container">
+          <div id="loading-bar" class="loading-bar"></div>
+        </div>
+      </div>
+    </div>
+    <slot />
+    <!-- <script is:inline>
+      document.addEventListener("DOMContentLoaded", function () {
+        AOS.init({
+          duration: 800,
+          easing: "ease-in-out",
+          once: true,
+          mirror: false,
+        });
+      });
+    </script> -->
+  </body>
 </html>
