--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
         <div class="flex justify-between items-center">
             <div>
                 <a href="#" class="text-xl font-bold tracking-widest futuristic-text">
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-sky-500 to-teal-800">
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-sky-500 to-emerald-300">
                         SANTIAGO
                     </span>
                     <span class="text-white"> ORREGO TORO</span>
