Se agrega la sección de proyectos

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,6 +1,7 @@
 ---
 import Hero from './Hero.astro'
 import Experience from './Experience.astro'
+import Projects from './Projects.astro'
 ---
 <main>
     <section id="hero" class="section relative flex items-center min-h-screen pt-20">
@@ -9,6 +10,10 @@ import Experience from './Experience.astro'
 
     <section id="experiencia" class="section bg-opacity-70 bg-gray-900">
         <Experience />
+    </section>
+
+    <section id="proyectos" class="section">
+        <Projects />
     </section>
 </main>
 
