Se importa y utiliza el componente Icons

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Icons from '../components/Icons.astro'
 ---
 <!doctype html>
 <html lang="es">
@@ -24,6 +25,7 @@ import "../styles/global.css";
         </div>
       </div>
     </div>
+    <Icons />
     <slot />
     <!-- <script is:inline>
       document.addEventListener("DOMContentLoaded", function () {
