Se importan los iconos de fontawesome

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,9 @@ import "@fontsource/orbitron/500.css";
 import "@fontsource/orbitron/700.css";
 import "@fontsource/orbitron/900.css";
 
+// Font Awesome
+import "@fortawesome/fontawesome-free/css/all.min.css";
+
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
