--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,10 @@
     --darker-bg: rgb(2, 4, 15);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--dark-bg);
     font-family: 'roboto', sans-serif;
@@ -74,6 +78,17 @@ h3,
     border-radius: 50%;
 }
 
+.project-card {
+    transition: all 0.3s ease;
+    background: rgba(5,7,33,0.7);
+    backdrop-filter: blur(10px);
+}
+
+.project-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 0 25px rgba(0, 242, 255, 0.4);
+}
+
 .neon-button {
     position: relative;
     display: inline-block;
@@ -121,6 +136,13 @@ h3,
 
 .glow {
     text-shadow: 0 0 5px var(--neon-blue), 0 0 15px var(--neon-blue), 0 0 30px var(--neon-blue);
+}
+
+.icon-technology {
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    flex-shrink: 0;
 }
 
 .preloader {
