Se coloca el gap para mostrar los timeline

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@
                 <div class="w-24 h-1 bg-gradient-to-r from-blue-500 to-purple-500 mx-auto"></div>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-1">
+            <div class="grid grid-cols-1 md:grid-cols-1 gap-8">
                 <div class="timeline-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="neon-border rounded-lg p-6 backdrop-blur-sm bg-opacity-30 bg-black">
                         <h3 class="text-xl font-bold mb-1 text-blue-400">Desarrollador</h3>
@@ -20,11 +20,11 @@
                     </div>
                 </div>
 
-                <!-- <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
+                <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
                     <div class="neon-border rounded-lg p-6 backdrop-blur-sm bg-opacity-30 bg-black">
-                        <h3 class="text-xl font-bold mb-1 text-blue-400">Frontend Developer</h3>
-                        <p class="text-sm text-purple-300 mb-3">2021 - 2023</p>
-                        <p class="text-gray-300">Desarrollo de interfaces de usuario modernas y responsivas, implementando las mejores prácticas en accesibilidad y rendimiento.</p>
+                        <h3 class="text-xl font-bold mb-1 text-blue-400">Aqui que pongo?</h3>
+                        <p class="text-sm text-purple-300 mb-3">2024 - Actualmente</p>
+                        <p class="text-gray-300">Se aplican desarrollos en comunidades cercanas para proyectos personales y colaborar con mas desarrolladores</p>
                         <div class="flex flex-wrap gap-2 mt-4">
                             <span class="text-xs px-3 py-1 rounded-full bg-blue-900 bg-opacity-30 text-blue-300 border border-blue-500">Vue.js</span>
                             <span class="text-xs px-3 py-1 rounded-full bg-purple-900 bg-opacity-30 text-purple-300 border border-purple-500">TailwindCSS</span>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
 
-                <div class="timeline-item" data-aos="fade-up" data-aos-delay="300">
+                <!-- <div class="timeline-item" data-aos="fade-up" data-aos-delay="300">
                     <div class="neon-border rounded-lg p-6 backdrop-blur-sm bg-opacity-30 bg-black">
                         <h3 class="text-xl font-bold mb-1 text-blue-400">Web Designer</h3>
                         <p class="text-sm text-purple-300 mb-3">2019 - 2021</p>
