Se importa el contacto al Main

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,7 +1,9 @@
 ---
-import Hero from './Hero.astro'
-import Experience from './Experience.astro'
-import Projects from './Projects.astro'
+import Hero from './Hero.astro';
+import Experience from './Experience.astro';
+import Projects from './Projects.astro';
+import Contact from './Contact.astro';
+import Footer from './Footer.astro';
 ---
 <main>
     <section id="hero" class="section relative flex items-center min-h-screen pt-20">
@@ -14,6 +16,10 @@ import Projects from './Projects.astro'
 
     <section id="proyectos" class="section">
         <Projects />
+    </section>
+
+    <section id="contacto" class="section bg-opacity-70 bg-gray-900">
+        <Contact />
     </section>
 </main>
 
